# coding-agent-for-everything

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  install-pptx-deps.sh  normalize-line-endings.sh  package-lock.json  package.json  pyproject.toml  start-slidev.sh
.github/: LINE_ENDINGS.md
.github/workflows/: deploy.yml
context/: README.md
context/design/: README.md  slide-structure.md
context/hints/: README.md  howto-convert-slidev-to-pptx.md  howto-host-slidev-on-github-pages.md
context/hints/slidev-kb/: howto-add-presenter-notes-in-slidev.md  howto-organize-multiple-decks-in-slidev.md  howto-organize-slidev-project-as-subdir.md
context/instructions/: README.md
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md
context/summaries/: README.md
context/tasks/: README.md  task-anything.md
context/tools/: README.md
examples/: README.md
resources/: README.md
slides/: README.md
slides/coding-agents-intro/: slides.md
slides/coding-agents-intro/main/: applications.md  challenges.md  history.md  human-in-the-loop.md  hypes.md  index.md  intro.md  live-example.md  my-perspective.md  new-paradigm.md  paper-survey-agent.md  past-projects.md  patent-writing-agent.md  thank-you.md  title.md  travel-agent.md  trends.md  what-it-means-for-programmers.md
slides/coding-agents-intro/public/gifs/: sources.json
src/code_them_all/: __init__.py
talks/: README.md
tutorials/: README.md
